Update CinemaDrape open source license

--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -37,14 +37,26 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
         <div class="aur-content-group">
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
-                CinemaDrape is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business,
-                non-profit, and for-profit. Before using CinemaDrape, you must accept its <a href="{{ site.custom.url }}/cinemadrape/windows/license/">License
-                Agreement</a>.
+                CinemaDrape is free and open source, and licensed under the 
+                <a href="{{ site.custom.url }}/cinemadrape/windows/license/">GNU General Public License v3.0</a>.
+                The source code is available 
+                <a href="https://github.com/aurelitec/cinemadrape-windows" target="_blank">on GitHub</a>. 
+                We look forward to your contributions!
             </p>
         </div>
     </div>
     <div class="col-lg-4">
         <ul class="list-unstyled aur-vert-logo-list">
+            <li>
+                <a href="http://opensource.org/" target="_blank">
+                    <img class="img-fluid" width="120" src="{{ site.custom.url }}/img/third/social/osi/osi-standard-logo.png" alt="OSI" />
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/aurelitec/cinemadrape-windows" target="_blank">
+                    <i class="fa fa-github aur-fa-logo" aria-hidden="true"></i>
+                </a>
+            </li>
             <li>
                 <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/CinemaDrape.shtml#status" target="_blank">
                     <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
