--- a/cinemadrape/windows/license/index.html
+++ b/cinemadrape/windows/license/index.html
@@ -8,6 +8,7 @@ description : You are free to use CinemaDrape to focus on your current task, by 
 ---
 
 {% capture thecontent %}
-{% include various/licenses/freeware.html appname="CinemaDrape" years="2010-2016" %}
+<h2 class="aur-page-heading">CinemaDrape License Agreement</h2>
+{% include various/licenses/gpl3.html appname="CinemaDrape" %}
 {% endcapture %}
 {% include templates/nosidebar-content.html %}
