--- a/injuredpixels/android/license/index.html
+++ b/injuredpixels/android/license/index.html
@@ -9,6 +9,6 @@ description : You are free to use InjuredPixels for Android to check the screen 
 
 {% capture thecontent %}
 <h2 class="aur-page-heading">InjuredPixels for Android License Agreement</h2>
-{% include various/licenses/apache.html years="2016-2017" %}
+{% include various/licenses/apache.html appname="InjuredPixels for Android" years="2016-2017" %}
 {% endcapture %}
 {% include templates/nosidebar-content.html %}
