--- a/injuredpixels/windows/license/index.html
+++ b/injuredpixels/windows/license/index.html
@@ -9,6 +9,6 @@ description : You are free to use InjuredPixels for Windows to check your PC, la
 
 {% capture thecontent %}
 <h2 class="aur-page-heading">InjuredPixels for Windows License Agreement</h2>
-{% include various/licenses/apache.html years="2009-2017" %}
+{% include various/licenses/apache.html appname="InjuredPixels for Windows" years="2009-2017" %}
 {% endcapture %}
 {% include templates/nosidebar-content.html %}
