Update CinemaDrape version and download links

--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -15,23 +15,23 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
         <div class="aur-content-group">
             <h2 class="aur-content-heading">Install CinemaDrape</h2>
             <p>
-                <strong>Version 2.1.1.300. Only 121KB.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you
+                <strong>Version 2.2.0.330. Only 140 KB.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you
                 also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. The
                 Installer program will copy the program on your PC, create a Start Menu entry, and set up an uninstaller.
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/cinemadrape/windows/cinemadrape-install.exe" role="button">Download EXE</a>
+                <a class="btn btn-primary" href="https://github.com/aurelitec/cinemadrape-windows/releases/download/v2.2.0.330/cinemadrape-install.exe" role="button">Download EXE</a>
             </p>
         </div>
         <div class="aur-content-group">
             <h2 class="aur-content-heading">Download CinemaDrape Portable</h2>
             <p>
-                <strong>Version 2.1.1.300. Only 46KB.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you
+                <strong>Version 2.2.0.330. Only 54 KB.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you
                 also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. No
                 installation is required. Just download and unpack the ZIP archive.<br />
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/cinemadrape/windows/cinemadrape-portable.zip" role="button">Download ZIP</a>
+                <a class="btn btn-primary" href="https://github.com/aurelitec/cinemadrape-windows/releases/download/v2.2.0.330/cinemadrape-portable.zip" role="button">Download ZIP</a>
             </p>
         </div>
         <div class="aur-content-group">
