Update CinemaDrape history

--- a/cinemadrape/windows/history/index.html
+++ b/cinemadrape/windows/history/index.html
@@ -13,6 +13,16 @@ description : View CinemaDrape's full version history and see a comprehensive li
     <h2 class="aur-page-heading">CinemaDrape Version History</h2>
 
     <section class="aur-content-group-hr">
+        <h3 class="aur-content-subheading">Version 2.2/h3>
+        <ul class="fa-ul aur-history-list">
+            {% include templates/history-item.html icon="fa-check" text="CinemaDrape for Windows has gone Open Source on GitHub" %}
+            {% include templates/history-item.html icon="fa-check" text="A new icon and a new interface highlight color inspired from cinema drapes" %}
+            {% include templates/history-item.html icon="fa-check" text="Minor interface improvements" %}
+            {% include templates/history-item.html icon="fa-clock-o" text="<time>September 8, 2017</time>" %}
+        </ul>
+    </section>
+
+    <section class="aur-content-group-hr">
         <h3 class="aur-content-subheading">Version 2.1</h3>
         <ul class="fa-ul aur-history-list">
             {% include templates/history-item.html icon="fa-check" text="Improved native support for Windows 10/8.1/8" %}
