Fix CinemaDrape history

--- a/cinemadrape/windows/history/index.html
+++ b/cinemadrape/windows/history/index.html
@@ -13,7 +13,7 @@ description : View CinemaDrape's full version history and see a comprehensive li
     <h2 class="aur-page-heading">CinemaDrape Version History</h2>
 
     <section class="aur-content-group-hr">
-        <h3 class="aur-content-subheading">Version 2.2/h3>
+        <h3 class="aur-content-subheading">Version 2.2</h3>
         <ul class="fa-ul aur-history-list">
             {% include templates/history-item.html icon="fa-check" text="CinemaDrape for Windows has gone Open Source on GitHub" %}
             {% include templates/history-item.html icon="fa-check" text="A new icon and a new interface highlight color inspired from cinema drapes" %}
