Add UTM tracking to sponsor pages; fix https download links

--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -20,7 +20,7 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
                 Installer program will copy the program on your PC, create a Start Menu entry, and set up an uninstaller.
             </p>
             <p>
-                <a class="btn btn-primary" href="https://github.com/aurelitec/cinemadrape-windows/releases/download/v2.2/cinemadrape-install.exe" role="button">Download EXE</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/cinemadrape/windows/cinemadrape-install.exe" role="button">Download EXE</a>
             </p>
         </div>
         <div class="aur-content-group">
@@ -31,7 +31,7 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
                 installation is required. Just download and unpack the ZIP archive.<br />
             </p>
             <p>
-                <a class="btn btn-primary" href="https://github.com/aurelitec/cinemadrape-windows/releases/download/v2.2/cinemadrape-portable.zip" role="button">Download ZIP</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/cinemadrape/windows/cinemadrape-portable.zip" role="button">Download ZIP</a>
             </p>
         </div>
         <div class="aur-content-group">
