--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -20,7 +20,7 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
                 Installer program will copy the program on your PC, create a Start Menu entry, and set up an uninstaller.
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-installer.exe" role="button">Download EXE</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/colorveil/windows/colorveil-installer.exe" role="button">Download EXE</a>
             </p>
         </div>
         <div class="aur-content-group">
@@ -31,7 +31,7 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
                 installation is required. Just download and unpack the ZIP archive.
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-portable.zip" role="button">Download ZIP</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/colorveil/windows/colorveil-portable.zip" role="button">Download ZIP</a>
             </p>
         </div>
         <div class="aur-content-group">
@@ -43,8 +43,8 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
                 deploy ColorVeil across your network.
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil.msi" role="button">Download 32-bit MSI</a>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-x64.msi" role="button">Download 64-bit MSI</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/colorveil/windows/colorveil.msi" role="button">Download 32-bit MSI</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/colorveil/windows/colorveil-x64.msi" role="button">Download 64-bit MSI</a>
             </p>
         </div>
         <div class="aur-content-group">
