--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -20,7 +20,7 @@ description : Download, install and run HTMtied on any PC, notebook or tablet wi
                 No installation is required. Just download and unpack the ZIP archive.<br />
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/htmtied/windows/htmtied-portable.zip" role="button">Download ZIP</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/htmtied/windows/htmtied-portable.zip" role="button">Download ZIP</a>
             </p>
         </div>
         <div class="aur-content-group">
