--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -20,7 +20,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
                 Installer program will copy the program on your PC, create a Start Menu entry, and set up an uninstaller.
             </p>
             <p>
-                <a class="btn btn-primary" href="https://github.com/aurelitec/injuredpixels-windows/releases/download/v4.0/injuredpixels-install.exe" role="button">Download EXE</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/injuredpixels/windows/injuredpixels-install.exe" role="button">Download EXE</a>
             </p>
         </div>
         <div class="aur-content-group">
@@ -31,7 +31,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
                 No installation is required. Just download and unpack the ZIP archive.<br />
             </p>
             <p>
-                <a class="btn btn-primary" href="https://github.com/aurelitec/injuredpixels-windows/releases/download/v4.0/injuredpixels-portable.zip" role="button">Download ZIP</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/injuredpixels/windows/injuredpixels-portable.zip" role="button">Download ZIP</a>
             </p>
         </div>
         <div class="aur-content-group">
@@ -42,7 +42,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
                 is required. Just download and select Open or Run.
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/web/hta/injuredpixels.hta" role="button">Download HTA</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/injuredpixels/web/hta/injuredpixels.hta" role="button">Download HTA</a>
             </p>
         </div>
         <div class="aur-content-group">
