--- a/thumbico/windows/download/index.html
+++ b/thumbico/windows/download/index.html
@@ -20,7 +20,7 @@ description   : Download, install and run Thumbico on any PC, notebook or tablet
                 Installer program will copy the program on your PC, create a Start Menu entry, and set up an uninstaller.
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/thumbico/windows/thumbico-install.exe" role="button">Download EXE</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/thumbico/windows/thumbico-install.exe" role="button">Download EXE</a>
             </p>
         </div>
         <div class="aur-content-group">
@@ -31,7 +31,7 @@ description   : Download, install and run Thumbico on any PC, notebook or tablet
                 No installation is required. Just download and unpack the ZIP archive.<br />
             </p>
             <p>
-                <a class="btn btn-primary" href="http://download.aurelitec.com/thumbico/windows/thumbico-portable.zip" role="button">Download ZIP</a>
+                <a class="btn btn-primary" href="https://download.aurelitec.com/thumbico/windows/thumbico-portable.zip" role="button">Download ZIP</a>
             </p>
         </div>
         <div class="aur-content-group">
