Fix og:image urls

--- a/htmtied/windows/index.html
+++ b/htmtied/windows/index.html
@@ -7,7 +7,7 @@ redirect_from : /htmtied/
 
 title         : HTMtied - Save your links as tiny portable bookmark files
 description   : HTMtied instantly converts your internet bookmarks into tiny portable bookmark files, that can be used on any PC, tablet, smartphone, or Dropbox.
-image         : /img/apps/htmtied/htmtied-jumbotron-shot.jpg
+image         : /img/apps/htmtied/windows/jumbotron/htmtied-windows-jumbotron-image.png
 ---
 
 <section class="aur-content-group text-center">
