--- a/pixelhealer/windows/index.html
+++ b/pixelhealer/windows/index.html
@@ -7,7 +7,7 @@ redirect_from : /pixelhealer/
 
 title         : PixelHealer - Try to fix dead pixels by yourself
 description   : Try to fix dead pixels by yourself, before running back to the store! Use it to fix dead pixels on LCD/TFT screens, on desktop monitors, laptops or tablets.
-image         : /img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg
+image         : /img/apps/pixelhealer/windows/jumbotron/pixelhealer-windows-jumbotron-image.png
 ---
 
 <section class="aur-content-group text-center">
