Start using site.url for absolute links

--- a/404.html
+++ b/404.html
@@ -9,6 +9,6 @@ description : Page Not Found
 
 {% capture thecontent %}
     <p>The page you are looking for could not be found.</p>
-    <p>Try the <a href="{{ site.custom.url }}/">Home Page</a>.</p>
+    <p>Try the <a href="{{ site.url }}/">Home Page</a>.</p>
 {% endcapture %}
 {% include templates/contentsection.html heading="404" %}
