--- a/cinemadrape/windows/download/index.html
+++ b/cinemadrape/windows/download/index.html
@@ -38,7 +38,7 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 CinemaDrape is free and open source, and licensed under the 
-                <a href="{{ site.custom.url }}/cinemadrape/windows/license/">GNU General Public License v3.0</a>.
+                <a href="{{ site.url }}/cinemadrape/windows/license/">GNU General Public License v3.0</a>.
                 The source code is available 
                 <a href="https://github.com/aurelitec/cinemadrape-windows" target="_blank">on GitHub</a>. 
                 We look forward to your contributions!
@@ -49,7 +49,7 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
         <ul class="list-unstyled aur-vert-logo-list">
             <li>
                 <a href="http://opensource.org/" target="_blank">
-                    <img class="img-fluid" width="120" src="{{ site.custom.url }}/img/third/social/osi/osi-standard-logo.png" alt="OSI" />
+                    <img class="img-fluid" width="120" src="{{ site.url }}/img/third/social/osi/osi-standard-logo.png" alt="OSI" />
                 </a>
             </li>
             <li>
@@ -59,13 +59,13 @@ description   : Download, install and run CinemaDrape on any PC, notebook or tab
             </li>
             <li>
                 <a href="http://www.softpedia.com/get/Desktop-Enhancements/Other-Desktop-Enhancements/CinemaDrape.shtml#status" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
+                    <img height="110" class="featured-logo" src="{{ site.url }}/img/third/reviews/s/softpedia/softpedia-clean-award.png" alt="Softpedia
                     Clean Award" />
                 </a>
             </li>
             <li>
                 <a href="http://cinemadrape.software.informer.com/awards/" target="_blank">
-                    <img height="110" class="featured-logo" src="{{ site.custom.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png"
+                    <img height="110" class="featured-logo" src="{{ site.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png"
                     alt="Software Informer Virus Free award" />
                 </a>
             </li>
