--- a/colorveil/windows/help/index.html
+++ b/colorveil/windows/help/index.html
@@ -17,7 +17,7 @@ description : Learn how to use ColorVeil to easily set a customizable color filt
             <h3 class="aur-content-subheading">Running ColorVeil for the first time</h3>
             <p>When you first open ColorVeil, your entire screen will get an Orange tint, and you will be presented with the following welcome screen:</p>
             <p>
-                <img class="img-fluid" src="{{ site.custom.url }}/img/apps/colorveil/windows/help/colorveil-windows-help-welcome-screen.png"
+                <img class="img-fluid" src="{{ site.url }}/img/apps/colorveil/windows/help/colorveil-windows-help-welcome-screen.png"
                 alt="ColorVeil Welcome Screen" />
             </p>
             <p>
@@ -59,7 +59,7 @@ description : Learn how to use ColorVeil to easily set a customizable color filt
             <li>Try running ColorVeil again, by clicking its Start Menu or Desktop shortcut.</li>
         </ul>
         <p>
-            <img class="img-fluid" src="{{ site.custom.url }}/img/apps/colorveil/windows/help/colorveil-windows-help-settings.png"
+            <img class="img-fluid" src="{{ site.url }}/img/apps/colorveil/windows/help/colorveil-windows-help-settings.png"
             alt="ColorVeil Settings Window" />
         </p>
     </section>
