--- a/injuredpixels/android/download/index.html
+++ b/injuredpixels/android/download/index.html
@@ -25,7 +25,7 @@ description : Install and run InjuredPixels on any smartphone or tablet with And
         <div class="aur-content-group">
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
-                InjuredPixels for Android is free and open source, and licensed under the <a href="{{ site.custom.url }}/injuredpixels/android/license/">Apache
+                InjuredPixels for Android is free and open source, and licensed under the <a href="{{ site.url }}/injuredpixels/android/license/">Apache
                 License Version 2.0</a>. The source code is available <a href="https://github.com/aurelitec/injuredpixels-android" target="_blank">on
                 GitHub</a>. We look forward to your contributions!
             </p>
