--- a/whatsmyco/web/download/index.html
+++ b/whatsmyco/web/download/index.html
@@ -23,7 +23,7 @@ description   : Run WhatsMyCo in any modern browser, and on any device - on PCs,
             <h2 class="aur-content-heading">License Agreement</h2>
             <p>
                 WhatsMyCo is free for use in any environment, including but not necessarily limited to: personal, academic, commercial, government, business,
-                non-profit, and for-profit. Before using WhatsMyCo, you must accept its <a href="{{ site.custom.url }}/whatsmyco/web/license/">License
+                non-profit, and for-profit. Before using WhatsMyCo, you must accept its <a href="{{ site.url }}/whatsmyco/web/license/">License
                 Agreement</a>.
             </p>
         </div>
