Update ColorVeil donation page

--- a/colorveil/donate/index.html
+++ b/colorveil/donate/index.html
@@ -10,12 +10,12 @@ description : Donate to support the development of ColorVeil, or just to say tha
 {% capture thecontent %}
 
   <h2 class="aur-page-heading">Donate to Support ColorVeil</h2>
-  
-  <h3 class="aur-content-subheading">Donate using Gumroad</h3>
-  
-  <p>
-    <a class="btn btn-primary" href="https://gum.co/colorveil" role="button" target="_blank">Donate</a>
-  </p>
+
+  <div class="aur-content-group">
+    <h3 class="aur-content-subheading">Donate using Gumroad</h3>
+    <p>ColorVeil is free for use in any environment: personal, academic, commercial, government, business, non-profit, and for-profit. Donate to support the development of ColorVeil, or just to say thanks.</p>
+    <p><a class="btn btn-primary" href="https://gum.co/colorveil" role="button" target="_blank">Donate</a></p>
+  </div>
 
 {% endcapture %}
 {% include templates/nosidebar-content.html %}
