--- a/colorveil/donate/index.html
+++ b/colorveil/donate/index.html
@@ -10,10 +10,11 @@ description : Donate to support the development of ColorVeil, or just to say tha
 {% capture thecontent %}
 
   <h2 class="aur-page-heading">Donate to Support ColorVeil</h2>
+  <p>ColorVeil is free for use in any environment: personal, academic, commercial, government, business, non-profit, and for-profit. Donate to support the development of ColorVeil, or just to say thanks.</p>
 
   <div class="aur-content-group">
     <h3 class="aur-content-subheading">Donate using Gumroad</h3>
-    <p>ColorVeil is free for use in any environment: personal, academic, commercial, government, business, non-profit, and for-profit. Donate to support the development of ColorVeil, or just to say thanks.</p>
+    <p>Gumroad is an online platform that believes that creators deserve to get paid for their work. Gumroad is for artists and creators: writers, designers, software developers, musicians, educators, filmmakers, and anyone in-between.</p>
     <p><a class="btn btn-primary" href="https://gum.co/colorveil" role="button" target="_blank">Donate</a></p>
   </div>
 
