--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -3,7 +3,7 @@ active        : download
 app           : colorveil-windows
 appname       : ColorVeil
 appurl        : /colorveil/windows/
-layout        : download-page
+layout        : download-page-colorveil
 redirect_from : /colorveil/download/
 
 title         : ColorVeil - Free Download
