--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -4,6 +4,7 @@ app           : colorveil-windows
 appurl        : /colorveil/windows/
 layout        : app-page
 redirect_from : /colorveil/
+redirect_to   : https://www.east-tec.com/colorveil/
 
 title         : ColorVeil - Screen color filter and dimmer
 description   : Add a color filter over your screen, over any website you visit, and over any program you use. Dim screen brightness, reduce eye strain, and save energy.
