Redirect ColorVeil download page

--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -5,6 +5,7 @@ appname       : ColorVeil
 appurl        : /colorveil/windows/
 layout        : download-page-colorveil
 redirect_from : /colorveil/download/
+redirect_to   : https://www.east-tec.com/colorveil/download/
 
 title         : ColorVeil - Free Download
 description   : Download, install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP. A portable version is also available.
