Redirect ColorVeil Help page

--- a/colorveil/windows/help/index.html
+++ b/colorveil/windows/help/index.html
@@ -3,6 +3,7 @@ active      : help
 app         : colorveil-windows
 appurl      : /colorveil/windows/
 layout      : app-page
+redirect_to : https://www.east-tec.com/colorveil/help/
 
 title       : ColorVeil Help - A color filter over your screen - Aurelitec
 description : Learn how to use ColorVeil to easily set a customizable color filter over your screen, reduce eye strain, and help with Dyslexia.
