Redirect ColorVeil History page

--- a/colorveil/windows/history/index.html
+++ b/colorveil/windows/history/index.html
@@ -3,6 +3,7 @@ active      : history
 app         : colorveil-windows
 appurl      : /colorveil/windows/
 layout      : app-page
+redirect_to : https://www.east-tec.com/colorveil/history/
 
 title       : ColorVeil Version History - What's new and improved
 description : View ColorVeil's full version history and see a comprehensive list of new features and improvements.
