Redirect ColorVeil License page

--- a/colorveil/windows/license/index.html
+++ b/colorveil/windows/license/index.html
@@ -2,6 +2,7 @@
 app         : colorveil-windows
 appurl      : /colorveil/windows/
 layout      : app-page
+redirect_to : https://www.east-tec.com/colorveil/license/
 
 title       : ColorVeil License Agreement - Free for home and business
 description : You are free to use ColorVeil to add a customizable color filter over your screen. Read the full License Agreement.
