--- a/iseepass/index.html
+++ b/iseepass/index.html
@@ -1,22 +1,30 @@
 ---
-layout      : article-page
+layout      : info-page
+heading     : ISeePass
 
 title       : ISeePass - Reveal hidden passwords in your browser
 description : Drag the ISeePass bookmarklet to your bookmarks toolbar, and simply click on it when you need X-ray vision to reveal hidden passwords under asterisks.
 ---
 
-<h2 class="aur-content-heading">See hidden passwords in PC or mobile browsers</h2>
-<p>Passwords in web browsers are hidden behind asterisks. This is for your protection, but what if you need to see what you are typing, or trying to recover or copy a saved password from behind the asterisks?</p>
-<p><b>Use ISeePass.</b> It's a tiny bookmarklet that instantly reveals all password on a web page. ISeePass works in web browsers across PCs, tablets and smartphones, running Android, iOS, Linux, Mac OS, Windows, and more.</p>
+<div class="aur-content-group">
+  <h2 class="aur-content-heading">See hidden passwords in PC or mobile browsers</h2>
+  <p>Passwords in web browsers are hidden behind asterisks. This is for your protection, but what if you need to see what you are typing, or trying to recover or copy a saved password from behind the asterisks?</p>
+  <p><b>Use ISeePass.</b> It's a tiny bookmarklet that instantly reveals all password on a web page. ISeePass works in web browsers across PCs, tablets and smartphones, running Android, iOS, Linux, Mac OS, Windows, and more.</p>
+</div>
 
-<h2 class="aur-content-heading">"Install" ISeePass</h2>
-<p><a class="btn btn-primary" href="javascript:(function(){var c,b,a;c=document.getElementsByTagName(&quot;input&quot;);for(b=0;b<c.length;b+=1)a=c[b],a.getAttribute(&quot;data-iseepass&quot;)?(a.setAttribute(&quot;type&quot;,&quot;password&quot;),a.removeAttribute(&quot;data-iseepass&quot;)):&quot;password&quot;===a.getAttribute(&quot;type&quot;)&amp;&amp;(a.setAttribute(&quot;type&quot;,&quot;text&quot;),a.setAttribute(&quot;autocomplete&quot;,&quot;off&quot;),a.setAttribute(&quot;data-iseepass&quot;,&quot;true&quot;))})();">ISeePass</a></p>
-<p><b>On a PC:</b> Simply drag the button to your browser's bookmarks bar (Chrome, Firefox, Safari, Opera, etc.)</p>
-<p><b>On a mobile device:</b> Chrome for Android synchronizes your bookmarks with the PC, so ISeePass should automatically appear on your device. On other mobile browsers (such as Firefox), long tap the button and select <i>Bookmark Link</i>.</p>
+<div class="aur-content-group">
+  <h2 class="aur-content-heading">"Install" ISeePass</h2>
+  <p><a class="btn btn-primary" href="javascript:(function(){var c,b,a;c=document.getElementsByTagName(&quot;input&quot;);for(b=0;b<c.length;b+=1)a=c[b],a.getAttribute(&quot;data-iseepass&quot;)?(a.setAttribute(&quot;type&quot;,&quot;password&quot;),a.removeAttribute(&quot;data-iseepass&quot;)):&quot;password&quot;===a.getAttribute(&quot;type&quot;)&amp;&amp;(a.setAttribute(&quot;type&quot;,&quot;text&quot;),a.setAttribute(&quot;autocomplete&quot;,&quot;off&quot;),a.setAttribute(&quot;data-iseepass&quot;,&quot;true&quot;))})();">ISeePass</a></p>
+  <p><b>On a PC:</b> Simply drag the button to your browser's bookmarks bar (Chrome, Firefox, Safari, Opera, etc.)</p>
+  <p><b>On a mobile device:</b> Chrome for Android synchronizes your bookmarks with the PC, so ISeePass should automatically appear on your device. On other mobile browsers (such as Firefox), long tap the button and select <i>Bookmark Link</i>.</p>
+</div>
 
-<h2 class="aur-content-heading">Why Trust ISeePass?</h2>
-<p>ISeePass is <strong>Free</strong> and <strong>Open Source</strong>. You can easily take a look at its <a href="https://github.com/aurelitec/iseepass" target="_blank">source code on GitHub</a> to check that everything is all right.</p>
+<div class="aur-content-group">
+  <h2 class="aur-content-heading">Why Trust ISeePass?</h2>
+  <p>ISeePass is <strong>Free</strong> and <strong>Open Source</strong>. You can easily take a look at its <a href="https://github.com/aurelitec/iseepass" target="_blank">source code on GitHub</a> to check that everything is all right.</p>
+</div>
 
-<h2 class="aur-content-heading">Final Warning</h2>
-<p>Because ISeePass reveals your saved passwords in plain text, it's not recommended to use ISeePass in public places or on public computers. And if you use it at home, it's recommended to keep your system up-to-date, and protected with a strong antivirus and firewall.</p>
-
+<div class="aur-content-group">
+  <h2 class="aur-content-heading">Final Warning</h2>
+  <p>Because ISeePass reveals your saved passwords in plain text, it's not recommended to use ISeePass in public places or on public computers. And if you use it at home, it's recommended to keep your system up-to-date, and protected with a strong antivirus and firewall.</p>
+</div>
