Add ISeePass screenshot

--- a/iseepass/index.html
+++ b/iseepass/index.html
@@ -6,6 +6,10 @@ title       : ISeePass - Reveal hidden passwords in your browser
 description : Drag the ISeePass bookmarklet to your bookmarks toolbar, and simply click on it when you need X-ray vision to reveal hidden passwords under asterisks.
 ---
 
+<p class="mb-5">
+  <img class="img-fluid" src="/img/apps/iseepass-featured.png" alt="ISeePass - Reveal hidden passwords in your browser">
+</p>
+
 <div class="aur-content-group">
   <h2 class="aur-content-heading">See hidden passwords in PC or mobile browsers</h2>
   <p>Passwords in web browsers are hidden behind asterisks. This is for your protection, but what if you need to see what you are typing, or trying to recover or copy a saved password from behind the asterisks?</p>
