Update ISeePass page layout

--- a/iseepass/index.html
+++ b/iseepass/index.html
@@ -1,6 +1,7 @@
 ---
-layout      : info-page
-heading     : ISeePass
+appname       : ISeePass
+appurl        : /iseepass/
+layout        : iseepass-page
 
 title       : ISeePass - Reveal hidden passwords in your browser
 description : Drag the ISeePass bookmarklet to your bookmarks toolbar, and simply click on it when you need X-ray vision to reveal hidden passwords under asterisks.
